force-app/main/default/objects/OutboundAttachment__e/OutboundAttachment__e.object-meta.xml
<CustomObject>
    <description>Sent when an xfiles attachment record is added</description>
    <label>Outbound Attachment</label>
    <pluralLabel>Outbound Attachments</pluralLabel>
</CustomObject>