force-app/main/default/objects/OutboundAttachment__e/fields/ClientDetails__c.field-meta.xml
<CustomField>
    <fullName>ClientDetails__c</fullName>
    <description>XFiles Client Details field</description>
    <label>Client Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>