force-app/main/default/objects/OutboundAttachment__e/fields/ContentLocalPath__c.field-meta.xml
<CustomField>
    <fullName>ContentLocalPath__c</fullName>
    <label>Content Local Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>