force-app/main/default/objects/OutboundAttachment__e/fields/ContentUID__c.field-meta.xml
<CustomField>
    <fullName>ContentUID__c</fullName>
    <label>ContentUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>