force-app/main/default/objects/OutboundAttachment__e/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>External Id of either the parent case or parent email message record</description>
    <label>Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>