force-app/main/default/objects/OutboundAttachment__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Either EmailMessage or Case, depending on the related parent record.</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>